Exit 0 for test scripts

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "files": [
     "*"
   ],
-  "scripts": {},
+  "scripts": {
+      "test": "exit 0"
+  },
   "publishConfig": {
     "@PhaseZeroTrials:registry": "https://npm.pkg.github.com/"
   },
