--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "*"
   ],
   "scripts": {
-      "test": "exit 0"
+    "test": "echo \"No tests specified\" && exit 0"
   },
   "publishConfig": {
     "@PhaseZeroTrials:registry": "https://npm.pkg.github.com/"
@@ -17,7 +17,6 @@
   },
   "author": "",
   "license": "ISC",
-  "test": "exit 0",
   "devDependencies": {},
   "repository": {
     "type": "git",
